# TriageFlow

./: .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  app.py  dashboard.py  environment.py  inference.py  landing.py  leaderboard.py  openenv.yaml  pyproject.toml  replay.py  requirements.txt
data/: leaderboard.json  tickets.json
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: __init__.py  test_environment.py  test_graders.py  test_reward.py
